<resources>
    <string name="app_name">MicroWaves</string>
    <string name="app_description">An app for the exploration of\nmicrotonal tunings</string>
    <string name="app_author">Riccardo Passoni\nLIM (Music Informatics Laboratory)</string>
    <string name="volume">Volume</string>
    <string name="duratatono">Tone duration</string>
    <string name="waveform">Wave type</string>
    <string name="ultimafrequenza">Last frequency played:</string>
    <string name="defaultfrequenza">0 Hz</string>
    <string name="nedo">n-EDO</string>
    <string name="nedospiegazione">Create your own EDO:</string>
    <string name="edo24">24-EDO</string>
    <string name="edo11">11-EDO</string>
    <string name="edo12">12-EDO</string>
    <string name="edo7">7-EDO</string>
    <string name="edo22">22-EDO</string>
    <string name="alpha">Alpha scale</string>
    <string name="scalazarlino">Syntonous diatonic scale</string>
    <string name="scalapitagora">Pythagorean tuning</string>
    <string name="bohlenpierce">Bohlen–Pierce scale</string>
    <string name="shierlu">Shí-èr-lǜ scale</string>
    <string name="hz">Hz</string>
    <string name="a4">A4:</string>
    <string name="ottava">Octave:</string>
    <string name="quintanumero">Fifth:</string>
    <string name="trittava">Tritave:</string>
    <string name="temperate">Equal Temperament</string>
    <string name="nonedo">Other tunings (non EDO)</string>
    <string name="spiegazionetemperate">Equal temperament is a tuning system that divides the octave into equal steps.
    \nThis is achieved by selecting a starting frequency for the octave, choosing the desired number of octave subdivisions then multiplying the central frequency by n-th root of 2 (octave) n times: this will result in a set of frequencies that divides the octave into n equally spaced notes.
    \nThe most commonly used equally tempered system is 12-EDO, more commonly known as twelve-tone equal temperament.
    \nThe octave can be divided into any amount of steps, for example 24-EDO is commonly used in Arabic music.
    \nSome scales subdivide different intervals (Alpha scale, Bohlen-Pierce scale): these can be considered equally tempered but they\'re not present in this section (not EDO).
    \n\nClick the button to have more information on the scales present in the app:</string>
    <string name="spiegazionenontemperate">Non EDO tunings comprise all the systems that don\'t subdivide the octave into equal steps, by using different approaches to build a set of frequency to compose music with.
        \n\nThey can be justly tuned, meaning all the ratios between the notes can be represented with rational numbers, they can be tempered, meaning the intervals of JI are slightly wider/narrower to meet certain requirements, and so on.
        \n\nIn this app the non EDO tunings presents range from historical justly intoned tunings like the Pythagorean, Shí-èr-lǜ and five-limit tuning (Zarlinian scale), to more experimental tunings like Wendy Carlos\' Alpha scale and the Bohlen-Pierce scale.
        \n\n\nClick the button to have more information on the scales present in the app:</string>
    <string name="scalesindetail">Scales in detail</string>
    <string name="spiegazione">Microtonal\ntheory</string>
    <string name="spiegazione11">11edo (or 11tet) is a tuning system that divides the octave into 11 equal parts (each step is approximately equivalent to 109.09 cents).
    \nIt\'s classified as a \"prime EDO\".</string>
    <string name="spiegazione24">24edo (or 24tet) is a tuning system that divides the octave into 24 equal parts of 50 cents each.
     It is also known as quarter-tone tuning, since it divides the semitone used in 12edo into two.</string>
    <string name="spiegazione12">Twelve tone equal temperament (12tet or 12edo) is the predominant tuning system in the western world.
     It divides the octave into 12 equal parts, each consisting of 100 cents.</string>
    <string name="spiegazione7">7edo (or 7tet) is a tuning system that divides the octave into 7 equal parts (each step is approximately equivalent to 171.4 cents).
    It\'s used in many cultures in Africa, for example it\'s the system used to tune the Balafon, a traditional percussive instrument.</string>
    <string name="spiegazione22">22edo (or 22tet) is a tuning system that divides the octave into 22 equal parts.
     \nIt can be considered as an approximation of the Indian shruti system, since it doesn\'t have a set size for the shruti (steps) and it divides the octave into 22 steps.</string>
    <string name="spiegazionealpha">The alpha scale is a non octave repeating system which can be approximated by dividing a perfect fifth interval into 9 equal steps.
    It was invented by american electronic music composer and musician Wendy Carlos.</string>
    <string name="spiegazionePitagorica">The pythagorean scale was invented in ancient Greece, it\'s generally attributed to the famous mathematician Pythagoras.
    \nIt\'s entirely based on the 3:2 ratio, equivalent to the perfect fifth interval, and the octave (2:1).</string>
    <string name="spiegazioneZarlino">Ptolemy\'s intense diatonic scale, was first theorised by the greek mathematician Ptolemy and later formalized by italian music theorist Zarlino.
    It constructs the scale by using three intervals: the greater tone (9:8), the lesser tone (10:9), and the just diatonic semitone (16:15).</string>
    <string name="spiegazioneBP">The Bohlen–Pierce scale is a tuning based on the division of the \"tritave\" (equivalent to a 3:1 ratio) instead of the usual octave (2:1 ratio).
    It can also be approximated to a justly intoned version, meaning each interval can be represented by a rational number.</string>
    <string name="spiegazioneShierlu">Shi-er-lu was a standard set of notes used in ancient chinese music theory. The first standardization of its pitches was written down during the 2nd century AD.
    It\'s constructed using solely powers of the perfect fifth (3:2, akin to the pythagorean tuning).</string>
    <string name="keyboard">Microtonal\nkeyboards</string>
    <string name="microtoni">Microtonal music or microtonality is the use of intervals smaller than a semitone (smaller musical interval used in western music, also known as a \"half tone\") in music.
    Sometimes the meaning is extended to cover any type of musical system that uses different intervals from the one used in 12EDO (the temperament used in most of the western world).
    \nMusical tunings can divide the octave equally or they can use different intervals to create the desired tuning. \nEqually temperate systems (also called n-EDO, equal division of the octave, or n-TET, tone equal temperament) divide the octave into \"n\" equal parts: each interval between the notes at the musician\'s disposal is the same.
    \nNon EDO systems divide the octave into different intervals, depending on the desired qualities of the tuning.</string>
    <string name="title_activity_temperate_dettaglio">temperate_detail</string>
    <string name="tab_text_1">12EDO</string>
    <string name="tab_text_2">24EDO</string>
    <string name="tab_text_3">22EDO</string>
    <string name="tab_text_4">11EDO</string>
    <string name="tab_text_5">7EDO</string>
    <string name="tab_text_6">Pythagorean</string>
    <string name="tab_text_7">Ptolemaic</string>
    <string name="tab_text_8">Alpha</string>
    <string name="tab_text_9">Bohlen-Pierce</string>
    <string name="tab_text_10">Shí-èr-lǜ</string>
    <string name="title_activity_nontemperate_dettaglio">nontemperate_detail</string>
    <string name="detailed12edo">\n12EDO, or as it is more commonly known Twelve-tone equal temperament, is the most common tuning system in the western world.
        \n\nIt is constructed by dividing the octave into 12 equal steps, each step is exactly 100 cents. Since it\'s an equally tempered system the ratio between each consecutive note is a twelfth root of two (≈ 1.05946).
    \n\nIt was first formalized in europe during the 18th century by Andreas Werckmeister but it was theorised both in ancient China and Greece
    \n\n\nSome examples of compositions in 12EDO:\n<a href="https://www.youtube.com/watch?v=bT7Hj-ea0VE">Bob Dylan - All Along the Watchtower</a>\n<a href="https://www.youtube.com/watch?v=qrO4YZeyl0I">Lady Gaga - Bad Romance</a>\n<a href="https://www.youtube.com/watch?v=VeTFxbsVGrI">Schoenberg: Drei Klavierstücke, Op. 11</a>\n<a href="https://www.youtube.com/watch?v=fJ9rUzIMcZQ">Queen – Bohemian Rhapsody</a></string>
    <string name="detailed24edo">\n24EDO, also known as the quarter-tone scale (since it divides the more common 12EDO system\'s intervals in half), is an equal temperament system that divides the octave into 24 equal parts.
                \n\nEach of the 24 steps is exactly 50 cents (half of 12EDO\'s intervals). Since it\'s an equally tempered system the ratio between each consecutive note is a twenty-fourth root of two  (≈ 1.0293).
    \n\nIt retains many of the harmonic qualities of twelve tone equal temperament (since it\'s a subset of 24EDO) and it\'s commonly used in arabic compositions and music theory.
    \n\n\nSome examples of compositions in 24EDO:\n<a href="https://www.youtube.com/watch?v=Q-i1XZc8ZwA">King Gizzard and The Lizard Wizard - Rattlesnake</a>\n<a href="https://www.youtube.com/watch?v=Uc5SL3isZJs">Luciano Berio - E vò</a>\n<a href="https://www.youtube.com/watch?v=r-Pld_6Q0N8">Umm Kulthum – Seret El Hob</a></string>
    <string name="detailed22edo">\n22EDO is an equal temperament system that divides the octave into 22 equal parts.
        \n\nEach of the 22 steps is exactly 54.54545 cents. Since it\'s an equally tempered scale the ratio between each consecutive note is a twenty-second root of two (≈ 1.03201).
    \n\nInspired by India\'s musical theory, this subdivision was first proposed in Europe by Robert Bosanquet, who considered it an acceptable approximation of just intonation. It is not a \"meantone temperament\" since it doesn\'t temper out the syntonic comma (81/80).
    \n\n\nSome examples of compositions in 22EDO:\n<a href="https://www.youtube.com/watch?v=l9wINwlgxRU">Sevish - Gleam</a>\n<a href="http://chrisvaisvil.com/22-edo-my-crazy-aunt-sophie/">Chris Vaisvil - My Crazy Aunt Sophie</a>\n<a href="https://www.youtube.com/watch?v=Qgb59snzMII">MÜÜR - Nenio reala</a></string>
    <string name="detailed11edo">\n11EDO is an equal temperament system that divides the octave into 11 equal parts.
        \n\nEach of the 11 steps is exactly 109.09091 cents. Since it\'s an equally tempered scale the ratio between each consecutive note is a eleventh root of two (≈ 1.06504).
    \n\n11EDO is a prime EDO, meaning it divides the octave into a prime number of notes.
    \n\n\n\nSome examples of compositions in 11EDO:\n<a href="https://www.youtube.com/watch?v=mWSBoPK_m4s">Chris Vaisvil - Eleven Birds</a>\n<a href="http://www.ozanyarman.com/files/music/Icicle_Caverns.mp3">Icicle Caverns - Ozan Yarman</a>\n<a href="https://www.youtube.com/watch?v=vXl3GN4qAWY">Koras – Dropping</a></string>
    <string name="detailed7edo">\n7EDO is an equal temperament system that divides the octave into 7 equal parts.
        \n\nEach of the 7 steps is exactly 171.429 cents. Since it\'s an equally tempered scale the ratio between each consecutive note is a seventh root of two (≈ 1.10409).
    \n\n7 EDO is a prime EDO, meaning it divides the octave into a prime number of notes.\nIt\'s used in Thai music to tune pentatonic scales and many african instruments, like the Balafon, use this tuning system.
    \n\n\nSome examples of compositions in 7EDO:\n<a href="https://www.youtube.com/watch?v=fqN16ZgZlNQ">hideya - Like KoB</a>\n<a href="https://www.youtube.com/watch?v=VeTFxbsVGrI">Sevish - Fuschiamarine</a>\n<a href="http://www.uvnitr.cz/flaoyg/flao_yg/kelt.mp3">Milan Guštar – Kelt</a></string>
</resources>